alignment for rotated even ships fixed

--- a/src/style.css
+++ b/src/style.css
@@ -69,10 +69,10 @@ h5{
 }
 
 .ship-even-long{
-    transform-origin: 37.5%;
+    transform-origin: 33%;
 }
 
 .ship-even-short{
-    transform-origin: 25%;
+    transform-origin: 18%;
 }
 
